apps/whoami/k8s.whoami.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 10
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      serviceAccount: whoami-server
      containers:
        - name: whoami
          # https://github.com/traefik/whoami
          image: traefik/whoami:v1.12.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 15m
              memory: 105M
            limits:
              cpu: 15m
              memory: 105M
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: whoami
  selector:
    app: whoami
