apps/whoami/k8s.whoami.ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: whoami
    namespace: whoami
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd, authelia-forwardauth-authelia@kubernetescrd
        kustomize.config.k8s.io/needs-hash: "false"
        kustomize.config.k8s.io/behavior: replace
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:MsiO8XWBFXMRvCp7mLPGIhIrTdnH/mA=,iv:RfF/GvTodgNTJvid2O+1SSvFVAFHJttidN59IYBAx+U=,tag:Ltm92AR0pbVLpEMZQNrs+g==,type:str]
          secretName: wildcard-cloudflare-production-01
    rules:
        - host: ENC[AES256_GCM,data:kDJLtIsvYh+ghj6aPxDibz4l4MyOIGk=,iv:B+lGKXDRLtpDCucc7Lti1S14OAT2XYf8XjZISvFQ/Gw=,tag:brwlYgnDroTd5+Zl/UuZ0w==,type:str]
          http:
            paths:
                - path: /bar
                  pathType: Exact
                  backend:
                    service:
                        name: whoami
                        port:
                            number: 80
                - path: /foo
                  pathType: Exact
                  backend:
                    service:
                        name: whoami
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvS2pmS2VERllQaWpsazJO
[...]
            jjBCKNNNEmKbzqGIin+sDru2oJF0DjzRH8DQlZSBNBtMygzeYT7afA==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIRGM1TVBJaFZMRHJ3N2xx
[...]
            IjaeqhThDgpr9lMaku10q5Ppey5VF+iqKn165iUjXcNLariakyYc5g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-19T19:06:17Z"
    mac: ENC[AES256_GCM,data:bc135QovK5dtFw+ta/tW6C5zqCa1uqdWDD+laqUeQESWD6En3xB5x11MfeWA368N6MdM5r8vsm1Ajo9kvf6RjPa6cqm6l8cpzYWEMtoDq8R0XjuidwZYeM7oS7CJcRSOddnFhCwaa0z87w6Y5Owhywpyu0Bere5CUcmd3Svdkt4=,iv:NRlq6d+g/VVNHDXCrBc7EmGf6wkJOEEppOg+QZ0e1h8=,tag:y2RRw/ZRRWHecEje/hvvTg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|clientSecret|argocdServerAdminPassword|oidc.config|commonName|literals)$
    version: 3.9.0
