apps/whoami/whoami.ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: whoami-auth
    namespace: whoami
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd, authelia-forwardauth-authelia@kubernetescrd
        #kustomize.config.k8s.io/needs-hash: "false"
        #kustomize.config.k8s.io/behavior: replace
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:MsiO8XWBFXMRvCp7mLPGIhIrTdnH/mA=,iv:RfF/GvTodgNTJvid2O+1SSvFVAFHJttidN59IYBAx+U=,tag:Ltm92AR0pbVLpEMZQNrs+g==,type:str]
          secretName: wildcard-cloudflare-production-01
    rules:
        - host: ENC[AES256_GCM,data:kDJLtIsvYh+ghj6aPxDibz4l4MyOIGk=,iv:B+lGKXDRLtpDCucc7Lti1S14OAT2XYf8XjZISvFQ/Gw=,tag:brwlYgnDroTd5+Zl/UuZ0w==,type:str]
          http:
            paths:
                - path: /foo
                  pathType: Exact
                  backend:
                    service:
                        name: whoami
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvS2pmS2VERllQaWpsazJO
[...]
            jjBCKNNNEmKbzqGIin+sDru2oJF0DjzRH8DQlZSBNBtMygzeYT7afA==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIRGM1TVBJaFZMRHJ3N2xx
[...]
            IjaeqhThDgpr9lMaku10q5Ppey5VF+iqKn165iUjXcNLariakyYc5g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-11-04T21:01:20Z"
    mac: ENC[AES256_GCM,data:F/HWXoNmv6ByDrYQbFpGto0BQJkwNAy5qgHpIl3px7+9CeXUKI/gtgN/ECb9kUjaBnE4PI7laHVjaUx8hEivWq1nBrnN0iIdHlflzfn4+Ikz0erWrURmosLJNBRlhzdaCDRCrMOMROTn/ia4rkfhH7bZhOsAs87Z6z84AWHjF64=,iv:pPTnW/cgnpYNiZwfV8lWqZxeY0KaXcU1gaWgIs9dNiI=,tag:iTZgRt2vhCnI4HmfMkLiOQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|clientSecret|argocdServerAdminPassword|oidc.config|commonName|literals)$
    version: 3.9.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: whoami-non-auth
    namespace: whoami
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
        #kustomize.config.k8s.io/needs-hash: "false"
        #kustomize.config.k8s.io/behavior: replace
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:MsiO8XWBFXMRvCp7mLPGIhIrTdnH/mA=,iv:RfF/GvTodgNTJvid2O+1SSvFVAFHJttidN59IYBAx+U=,tag:Ltm92AR0pbVLpEMZQNrs+g==,type:str]
          secretName: wildcard-cloudflare-production-01
    rules:
        - host: ENC[AES256_GCM,data:kDJLtIsvYh+ghj6aPxDibz4l4MyOIGk=,iv:B+lGKXDRLtpDCucc7Lti1S14OAT2XYf8XjZISvFQ/Gw=,tag:brwlYgnDroTd5+Zl/UuZ0w==,type:str]
          http:
            paths:
                - path: /bar
                  pathType: Exact
                  backend:
                    service:
                        name: whoami
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvS2pmS2VERllQaWpsazJO
[...]
            jjBCKNNNEmKbzqGIin+sDru2oJF0DjzRH8DQlZSBNBtMygzeYT7afA==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIRGM1TVBJaFZMRHJ3N2xx
[...]
            IjaeqhThDgpr9lMaku10q5Ppey5VF+iqKn165iUjXcNLariakyYc5g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-11-04T21:01:20Z"
    mac: ENC[AES256_GCM,data:F/HWXoNmv6ByDrYQbFpGto0BQJkwNAy5qgHpIl3px7+9CeXUKI/gtgN/ECb9kUjaBnE4PI7laHVjaUx8hEivWq1nBrnN0iIdHlflzfn4+Ikz0erWrURmosLJNBRlhzdaCDRCrMOMROTn/ia4rkfhH7bZhOsAs87Z6z84AWHjF64=,iv:pPTnW/cgnpYNiZwfV8lWqZxeY0KaXcU1gaWgIs9dNiI=,tag:iTZgRt2vhCnI4HmfMkLiOQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|clientSecret|argocdServerAdminPassword|oidc.config|commonName|literals)$
    version: 3.9.1
